--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-alt.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login-page</title>
   </head>
   <body>
+ 
     <div class="login-container">
       <div class = "login-box">
-        <h2>Login</h2>
+        <h2>Welcome</h2>
         <input type="text" id="username" name="username" required placeholder="Username">
         <input type="text" id="password" name="password" required placeholder="Password">
         <div class = "remember">
-          <input type="checkbox" id ="remember" name = "remember">
-          <label for = "remember"> Запомнить меня</label>
-          <a href="https://rutube.ru/video/838cd3ce66aabe927c05ea6bfe5ccba9/?&utm_source=embed&utm_medium=referral&utm_campaign=logo&utm_content=838cd3ce66aabe927c05ea6bfe5ccba9&utm_term=yastatic.net%2F&referrer=appmetrica_tracking_id%3D1037600761300671389%26ym_tracking_id%3D11611406671714022428">Забыл пароль</a>
-        </div>
-        <button type="button">Login</button>
-        <p>Не зарегистрированы? <a href="https://rutube.ru/video/838cd3ce66aabe927c05ea6bfe5ccba9/?&utm_source=embed&utm_medium=referral&utm_campaign=logo&utm_content=838cd3ce66aabe927c05ea6bfe5ccba9&utm_term=yastatic.net%2F&referrer=appmetrica_tracking_id%3D1037600761300671389%26ym_tracking_id%3D11611406671714022428" id = "register">Регистрация</a></p>
+
       </div>
-      </div>      
-    </div>
+        <button type="button">Log-in</button>     
+        <div class="image-container-right">
+          <img src="/src/assets/maintenance.png" alt="Тех обслуживание">
+        </div>
+    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
